--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -97,7 +97,7 @@ jobs:
           #CONFIG_GRUB_CONSOLE=y
           #CONFIG_GRUB_SERIAL="ttyS0"
           #CONFIG_GRUB_BAUDRATE=115200
-          C#ONFIG_GRUB_BOOTOPTS=""
+          #CONFIG_GRUB_BOOTOPTS=""
           #CONFIG_GRUB_TIMEOUT="0"
           #CONFIG_GRUB_TITLE="OpenWrt"
           #CONFIG_QCOW2_IMAGES=y
