--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -67,6 +67,10 @@ jobs:
         run: |
           rm -f ./.config*
           cp ./1.config ./.config
+          pushd package/lean
+          git clone https://github.com/jerrykuku/lua-maxminddb.git
+          git clone https://github.com/jerrykuku/luci-app-vssr.git
+          popd
           make defconfig
 
       - name: Make download
